--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,12 +75,34 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Nunito
+      fonts:
+        - asset: fonts/Static/Nunito-Black.ttf
+        - asset: fonts/Static/Nunito-BlackItalic.ttf
+          style: italic
+        - asset: fonts/Static/Nunito-Bold.ttf
+          weight: 700
+        - asset: fonts/Static/Nunito-BoldItalic.ttf
+          style: italic
+          weight: 700
+        - asset: fonts/Static/Nunito-ExtraBold.ttf
+          weight: 800
+        - asset: fonts/Static/Nunito-ExtraBoldItalic.ttf
+          style: italic
+          weight: 800
+        - asset: fonts/Static/Nunito-Italic.ttf
+          style: italic
+        - asset: fonts/Static/Nunito-Light.ttf
+          weight: 300
+        - asset: fonts/Static/Nunito-LightItalic.ttf
+          style: italic
+          weight: 300
+        - asset: fonts/Static/Nunito-Medium.ttf
+          weight: 500
+        - asset: fonts/Static/Nunito-MediumItalic.ttf
+          weight: 500
+          style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
