--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -10,20 +10,20 @@ flutter_native_splash:
   # of your splash screen to a solid color.  Use background_image to set the background of your
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
-  #color: "#F5F5DC"
-  background_image: "images/eupheus_start_page.jpg"
+  color: "#FFF7E4"
+  # background_image: "images/EupheusLogo.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
   # the leading # character.
 
   # The image parameter allows you to specify an image used in the splash screen.  It must be a
   # png file and should be sized for 4x pixel density.
-  #image: images/puzzle.png
+  image: images/EupheusLogo.png
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. It is supported for Android, iOS and the Web.  For Android 12,
   # see the Android 12 section below.
-  #branding: images/puzzle.png
+  # branding: images/EupheusLogo.png
 
   # To position the branding image at the bottom of the screen you can use bottom, bottomRight,
   # and bottomLeft. The default values is bottom if not specified or specified something else.
@@ -50,13 +50,13 @@ flutter_native_splash:
     # 640 pixels in diameter.
     # App icon without an icon background: This should be 1152×1152 pixels, and fit within a circle
     # 768 pixels in diameter.
-    #image: assets/android12splash.png
+    image: images/EupheusLogo.png
 
     # Splash screen background color.
-    #color: "#42a5f5"
+    color: "#FFF7E4"
 
     # App icon background color.
-    #icon_background_color: "#111111"
+    icon_background_color: "#FFF7E4"
 
     # The branding property allows you to specify an image used as branding in the splash screen.
     #branding: assets/dart.png
