--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  video_player:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -67,6 +68,12 @@ flutter:
   assets:
     - images/EupheusLogo.png
     - assets/searchresults.json
+    - images/crypto_thumbnail.png
+    - aivideos/Crypto_Eupheus.mp4
+    - aivideos/CPF_eupheus.mp4
+    - aivideos/CulturalDiversity_eupheus.mp4
+    - images/eupheus_splashscreen.png
+  
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
