me page  - my journey

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ flutter:
     - aivideos/CulturalDiversity_eupheus.mp4
     - images/eupheus_splashscreen.png
     - images/eupheusLogo_large.png
-    - images/eupheus_avatar.jpg
+    - images/eupheus_avatar.JPG
   
   #   - images/a_dot_ham.jpeg
 
