--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ flutter:
     - images/eupheus_splashscreen.png
     - images/eupheusLogo_large.png
     - images/eupheus_avatar.JPG
+    - images/Quiz1_logo.png
+    - aivideos/QuizDemo.mp4
   
   #   - images/a_dot_ham.jpeg
 
