--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - images/eupheus_avatar.JPG
     - images/Quiz1_logo.png
     - aivideos/QuizDemo.mp4
+    - aivideos/Sustainability.mp4
   
   #   - images/a_dot_ham.jpeg
 
