--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,7 +84,7 @@ flutter:
     - images/Quiz1_logo.png
     - aivideos/QuizDemo.mp4
     - aivideos/Sustainability.mp4
-    - images/communitydemo.png
+    - images/virtualcommunity.png
   
   #   - images/a_dot_ham.jpeg
 
