make challenge logo clearer

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
     - aivideos/QuizDemo.mp4
     - aivideos/Sustainability.mp4
     - images/virtualcommunity.png
+    - images/challenge_logo.png
   
   #   - images/a_dot_ham.jpeg
 
