--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.eupheus_app">
     <application
-        android:label="eupheus_app"
+        android:label="eupheus"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
