--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -59,7 +59,7 @@ flutter_native_splash:
     icon_background_color: "#FFF7E4"
 
     # The branding property allows you to specify an image used as branding in the splash screen.
-    branding: images/eupheusLogo_large.png
+    # branding: images/eupheusLogo_large.png
 
     # The image_dark, color_dark, icon_background_color_dark, and branding_dark set values that
     # apply when the device is in dark mode. If they are not specified, the app will use the
